linting and cleanup